Fix copy and expand

--- a/docs/_includes/comparison.html
+++ b/docs/_includes/comparison.html
@@ -29,12 +29,12 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/grid/tiles/">
       tile
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -44,12 +44,12 @@
   </th>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/form/general/">
       field
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -126,12 +126,12 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/form/select/">
       select
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -160,12 +160,12 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/form/file/">
       file
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -187,12 +187,12 @@
   </th>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/elements/box/">
       box
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -209,12 +209,12 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/elements/content/">
       content
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -351,20 +351,20 @@
   </td>
 </tr>
 <tr>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     –
   </td>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="http://getbootstrap.com/css/#type-lists" target="_blank">
       lists
     </a>
   </td>
 </tr>
 <tr>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     –
   </td>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="http://getbootstrap.com/css/#caret" target="_blank">
       caret
     </a>
@@ -388,12 +388,12 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/components/card/">
       card
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -410,20 +410,20 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/components/level/">
       level
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
 <tr>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     –
   </td>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="http://getbootstrap.com/components/#list-group" target="_blank">
       list group
     </a>
@@ -442,12 +442,12 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/components/menu/">
       menu
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -488,10 +488,10 @@
   </td>
 </tr>
 <tr>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     –
   </td>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="http://getbootstrap.com/components/#page-header" target="_blank">
       page header
     </a>
@@ -510,12 +510,12 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/components/panel/">
       panel
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
@@ -532,10 +532,10 @@
   </td>
 </tr>
 <tr>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     –
   </td>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="http://getbootstrap.com/components/#wells" target="_blank">
       wells
     </a>
@@ -571,22 +571,22 @@
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/layout/section/">
       section
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
 <tr>
-  <td class="is-unique">
+  <td class="bd-is-unique">
     <a href="{{ site.url }}/documentation/layout/footer/">
       footer
     </a>
   </td>
-  <td class="is-empty">
+  <td class="bd-is-empty">
     <span>–</span>
   </td>
 </tr>
