--- a/docs/_includes/pro.html
+++ b/docs/_includes/pro.html
@@ -1,4 +1,4 @@
-<article class="media bd-pro is-{{ include.type }}">
+<article class="media bd-pro bd-is-{{ include.type }}">
   <aside class="media-left">
     <span class="icon">
       <i class="fa fa-{{ include.icon }}"></i>
