--- a/docs/_sass/bootstrap.sass
+++ b/docs/_sass/bootstrap.sass
@@ -46,11 +46,11 @@ $bootstrap-invert: #fff
   p:not(:last-child)
     margin-bottom: 0.5rem
 
-.bd-pro.is-bulma
+.bd-pro.bd-is-bulma
   .icon
     color: $primary
 
-.bd-pro.is-bootstrap
+.bd-pro.bd-is-bootstrap
   .icon
     color: $bootstrap
 
@@ -85,10 +85,10 @@ $bootstrap-invert: #fff
         color: currentColor
         &:hover
           text-decoration: underline
-    .is-empty
+    .bd-is-empty
       background-color: $background
       color: $text-light
-    .is-unique
+    .bd-is-unique
       background-color: rgba($green, 0.25)
       color: $text-strong
       font-weight: $weight-bold
