--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9514,8 +9514,8 @@ html.route-index #carbon {
   position: relative;
 }
 
-.highlight .copy,
-.highlight .expand {
+.highlight .bd-copy,
+.highlight .bd-expand {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -9532,13 +9532,13 @@ html.route-index #carbon {
   top: 0;
 }
 
-.highlight .copy:hover,
-.highlight .expand:hover {
+.highlight .bd-copy:hover,
+.highlight .bd-expand:hover {
   border-color: #ff3860;
   color: #ff3860;
 }
 
-.highlight .expand {
+.highlight .bd-expand {
   border-right-width: 1px;
   right: 50px;
 }
@@ -10299,11 +10299,11 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   margin-bottom: 0.5rem;
 }
 
-.bd-pro.is-bulma .icon {
+.bd-pro.bd-is-bulma .icon {
   color: #00d1b2;
 }
 
-.bd-pro.is-bootstrap .icon {
+.bd-pro.bd-is-bootstrap .icon {
   color: #6f5499;
 }
 
@@ -10354,12 +10354,12 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   text-decoration: underline;
 }
 
-.bd-comparison .table .is-empty {
+.bd-comparison .table .bd-is-empty {
   background-color: whitesmoke;
   color: #7a7a7a;
 }
 
-.bd-comparison .table .is-unique {
+.bd-comparison .table .bd-is-unique {
   background-color: rgba(35, 209, 96, 0.25);
   color: #363636;
   font-weight: 700;
