--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -91,8 +91,8 @@ $structure-invert: $danger-invert
 
 .highlight
   position: relative
-  .copy,
-  .expand
+  .bd-copy,
+  .bd-expand
     +unselectable
     background: $white
     border: solid $border
@@ -106,7 +106,7 @@ $structure-invert: $danger-invert
     &:hover
       border-color: $code
       color: $code
-  .expand
+  .bd-expand
     border-right-width: 1px
     right: 50px
   +tablet
