Fix columns docs

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -21,14 +21,5 @@ $twitter: #55acee
 @import "./_sass/love"
 @import "./_sass/bootstrap"
 
-\:root
-  --primary: #{$primary}
-  --gap: 0.75rem
-
-html
-  \::-moz-selection
-    background: $primary
-    color: $primary-invert
-  \::selection
-    background: $primary
-    color: $primary-invert
+.columns
+  background-color: coral
