--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -124,3 +124,31 @@
 .bd-emoji
   margin-right: 0.5em
   margin-top: 2px
+
+$notification-background-color: $background !default
+$notification-radius: $radius !default
+$notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
+
+.bd-notification
+  background-color: $background
+  border-radius: $radius
+  padding: 1.25rem 1.5rem
+  position: relative
+  text-align: center
+  .title,
+  .subtitle,
+  .content,
+  strong
+    color: currentColor
+  code,
+  pre
+    background: $white
+  pre code
+    background: transparent
+  // Colors
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+    $color-invert: nth($pair, 2)
+    &.is-#{$name}
+      background-color: $color
+      color: $color-invert
