--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -38,6 +38,10 @@
     &:not(:last-child)
       margin-bottom: 1.5rem
 
+.highlight.bd-is-hovering
+  border-radius: 2px
+  box-shadow: 0 0 0 3px $border
+
 .highlight pre
   max-height: 480px
   margin-bottom: 0 !important
@@ -93,22 +97,22 @@ $structure-invert: $danger-invert
   position: relative
   .bd-copy,
   .bd-expand
-    +unselectable
-    background: $white
-    border: solid $border
-    border-width: 0 0 1px 1px
-    color: $text-light
+    background: none
+    border: none
+    color: $text
     cursor: pointer
+    font-size: 0.625rem
     outline: none
+    padding-bottom: 0
+    padding-top: 0
     position: absolute
-    right: 0
-    top: 0
+    right: 0.25rem
+    top: 0.25rem
     &:hover
-      border-color: $code
-      color: $code
+      background-color: $text
+      color: $white
   .bd-expand
-    border-right-width: 1px
-    right: 50px
+    right: 45px
   +tablet
     pre
       white-space: pre-wrap
