--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -132,7 +132,7 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 .bd-notification
   background-color: $background
   border-radius: $radius
-  padding: 1.25rem 1.5rem
+  padding: 1.25rem 0
   position: relative
   text-align: center
   .title,
