--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -21,5 +21,5 @@ $twitter: #55acee
 @import "./_sass/love"
 @import "./_sass/bootstrap"
 
-.columns
-  background-color: coral
+// .columns
+//   background-color: coral
