--- a/docs/_includes/anchor.html
+++ b/docs/_includes/anchor.html
@@ -1,6 +1,6 @@
 <hr style="margin-bottom: 0;">
 
-<h3 id="{{ include.name | slugify }}" class="title bd-anchor-title">
+<h3 id="{{ include.name | slugify }}" class="title is-4 bd-anchor-title">
   {{ include.name }}
   <a class="bd-anchor-link" href="#{{ include.name | slugify }}">
     #
