--- a/docs/_includes/subnav-columns.html
+++ b/docs/_includes/subnav-columns.html
@@ -16,8 +16,8 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'options' %}is-active{% endif %}" href="{{ site.url }}/documentation/columns/options/">
         Options
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'variable-gap' %}is-active{% endif %}" href="{{ site.url }}/documentation/columns/variable-gap/">
-        Variable gap
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'gap' %}is-active{% endif %}" href="{{ site.url }}/documentation/columns/gap/">
+        Gap
       </a>
     </div>
   </div>
