--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -20,6 +20,7 @@ $twitter: #55acee
 @import "./_sass/expo"
 @import "./_sass/love"
 @import "./_sass/bootstrap"
+@import "./_sass/klmn"
 
 // .columns
 //   background-color: coral
