--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -1,6 +1,7 @@
 $tag-background-color: $background !default
 $tag-color: $text !default
 $tag-radius: $radius !default
+$tag-delete-margin: 1px !default
 
 .tags
   align-items: center
@@ -55,6 +56,7 @@ $tag-radius: $radius !default
     font-size: $size-medium
   // Modifiers
   &.is-delete
+  	margin-left: $tag-delete-margin
     padding: 0
     position: relative
     width: 2em
