--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -26,7 +26,7 @@ $tag-delete-margin: 1px !default
         border-bottom-right-radius: 0
         border-top-right-radius: 0
 
-.tag
+.tag:not(body)
   align-items: center
   background-color: $tag-background-color
   border-radius: $tag-radius
