Add fixed navbar

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -62,7 +62,7 @@ variables:
 {% include subnav-components.html %}
 
 {% capture navbar_example %}
-{% include navbar.html id="bd-example" %}
+{% include navbar.html id="bd-example" static="true" %}
 {% endcapture %}
 
 {% capture navbar_brand_example %}
