moving icon to bottom to accomodate label.

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -558,7 +558,7 @@ $help-size: $size-small !default
       height: 2.25em
       pointer-events: none
       position: absolute
-      top: 0
+      bottom: 0
       width: 2.25em
       z-index: 4
   &.has-icons-left
