--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -89,7 +89,7 @@ a.nav-item
 
 .nav-menu
   // Responsiveness
-  +mobile
+  +touch
     &.nav-right
       background-color: $white
       box-shadow: 0 4px 7px rgba($black, 0.1)
