--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -132,7 +132,7 @@
           .nav-item
             border-top-color: rgba($color-invert, 0.2)
   // Sizes
-  &.is-narrow
+  &.is-small
     .hero-body
       padding-bottom: 1.5rem
       padding-top: 1.5rem
