--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2764,7 +2764,7 @@ input[type="submit"].button {
       margin-left: -5px;
       transform: rotate(-45deg);
       transform-origin: left bottom; }
-  @media screen and (min-width: 769px), print {
+  @media screen and (min-width: 1000px) {
     .nav-toggle {
       display: none; } }
 
@@ -2786,7 +2786,7 @@ input[type="submit"].button {
     margin-right: 0.5rem; }
   .nav-item .tag:last-child:not(:first-child) {
     margin-left: 0.5rem; }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 999px) {
     .nav-item {
       justify-content: flex-start; } }
 
@@ -3860,7 +3860,7 @@ label.panel-block {
         color: #0a0a0a; }
     .hero.is-white .nav {
       box-shadow: 0 1px 0 rgba(10, 10, 10, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-white .nav-menu {
         background-color: white; } }
     .hero.is-white a.nav-item,
@@ -3887,10 +3887,10 @@ label.panel-block {
       color: white; }
     .hero.is-white.is-bold {
       background-image: linear-gradient(141deg, #e8e3e4 0%, white 71%, white 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-white.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #e8e3e4 0%, white 71%, white 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-white .nav-toggle span {
         background-color: #0a0a0a; }
       .hero.is-white .nav-toggle:hover {
@@ -3914,7 +3914,7 @@ label.panel-block {
         color: white; }
     .hero.is-black .nav {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-black .nav-menu {
         background-color: #0a0a0a; } }
     .hero.is-black a.nav-item,
@@ -3941,10 +3941,10 @@ label.panel-block {
       color: #0a0a0a; }
     .hero.is-black.is-bold {
       background-image: linear-gradient(141deg, black 0%, #0a0a0a 71%, #181616 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-black.is-bold .nav-menu {
           background-image: linear-gradient(141deg, black 0%, #0a0a0a 71%, #181616 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-black .nav-toggle span {
         background-color: white; }
       .hero.is-black .nav-toggle:hover {
@@ -3968,7 +3968,7 @@ label.panel-block {
         color: #363636; }
     .hero.is-light .nav {
       box-shadow: 0 1px 0 rgba(54, 54, 54, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-light .nav-menu {
         background-color: #f0f0f0; } }
     .hero.is-light a.nav-item,
@@ -3995,10 +3995,10 @@ label.panel-block {
       color: #f0f0f0; }
     .hero.is-light.is-bold {
       background-image: linear-gradient(141deg, #dad2d3 0%, #f0f0f0 71%, #fdfcfc 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-light.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #dad2d3 0%, #f0f0f0 71%, #fdfcfc 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-light .nav-toggle span {
         background-color: #363636; }
       .hero.is-light .nav-toggle:hover {
@@ -4022,7 +4022,7 @@ label.panel-block {
         color: #f0f0f0; }
     .hero.is-dark .nav {
       box-shadow: 0 1px 0 rgba(240, 240, 240, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-dark .nav-menu {
         background-color: #363636; } }
     .hero.is-dark a.nav-item,
@@ -4049,10 +4049,10 @@ label.panel-block {
       color: #363636; }
     .hero.is-dark.is-bold {
       background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-dark.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-dark .nav-toggle span {
         background-color: #f0f0f0; }
       .hero.is-dark .nav-toggle:hover {
@@ -4076,7 +4076,7 @@ label.panel-block {
         color: #fff; }
     .hero.is-primary .nav {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-primary .nav-menu {
         background-color: #3b739e; } }
     .hero.is-primary a.nav-item,
@@ -4103,10 +4103,10 @@ label.panel-block {
       color: #3b739e; }
     .hero.is-primary.is-bold {
       background-image: linear-gradient(141deg, #256881 0%, #3b739e 71%, #3c6db7 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-primary.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #256881 0%, #3b739e 71%, #3c6db7 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-primary .nav-toggle span {
         background-color: #fff; }
       .hero.is-primary .nav-toggle:hover {
@@ -4130,7 +4130,7 @@ label.panel-block {
         color: #fff; }
     .hero.is-info .nav {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-info .nav-menu {
         background-color: #5da7a7; } }
     .hero.is-info a.nav-item,
@@ -4157,10 +4157,10 @@ label.panel-block {
       color: #5da7a7; }
     .hero.is-info.is-bold {
       background-image: linear-gradient(141deg, #3f9284 0%, #5da7a7 71%, #68a9b6 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-info.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #3f9284 0%, #5da7a7 71%, #68a9b6 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-info .nav-toggle span {
         background-color: #fff; }
       .hero.is-info .nav-toggle:hover {
@@ -4184,7 +4184,7 @@ label.panel-block {
         color: #fff; }
     .hero.is-success .nav {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-success .nav-menu {
         background-color: #68ba97; } }
     .hero.is-success a.nav-item,
@@ -4211,10 +4211,10 @@ label.panel-block {
       color: #68ba97; }
     .hero.is-success.is-bold {
       background-image: linear-gradient(141deg, #3fb06d 0%, #68ba97 71%, #75c7b1 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-success.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #3fb06d 0%, #68ba97 71%, #75c7b1 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-success .nav-toggle span {
         background-color: #fff; }
       .hero.is-success .nav-toggle:hover {
@@ -4238,7 +4238,7 @@ label.panel-block {
         color: rgba(0, 0, 0, 0.7); }
     .hero.is-warning .nav {
       box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-warning .nav-menu {
         background-color: #ffec8e; } }
     .hero.is-warning a.nav-item,
@@ -4265,10 +4265,10 @@ label.panel-block {
       color: #ffec8e; }
     .hero.is-warning.is-bold {
       background-image: linear-gradient(141deg, #ffc85b 0%, #ffec8e 71%, #ffffa8 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-warning.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #ffc85b 0%, #ffec8e 71%, #ffffa8 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-warning .nav-toggle span {
         background-color: rgba(0, 0, 0, 0.7); }
       .hero.is-warning .nav-toggle:hover {
@@ -4292,7 +4292,7 @@ label.panel-block {
         color: #fff; }
     .hero.is-danger .nav {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-danger .nav-menu {
         background-color: #ff8e8e; } }
     .hero.is-danger a.nav-item,
@@ -4319,10 +4319,10 @@ label.panel-block {
       color: #ff8e8e; }
     .hero.is-danger.is-bold {
       background-image: linear-gradient(141deg, #ff5b76 0%, #ff8e8e 71%, #ffb6a8 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-danger.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #ff5b76 0%, #ff8e8e 71%, #ffb6a8 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-danger .nav-toggle span {
         background-color: #fff; }
       .hero.is-danger .nav-toggle:hover {
@@ -4346,7 +4346,7 @@ label.panel-block {
         color: #fff; }
     .hero.is-purple .nav {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-purple .nav-menu {
         background-color: #8372bb; } }
     .hero.is-purple a.nav-item,
@@ -4373,10 +4373,10 @@ label.panel-block {
       color: #8372bb; }
     .hero.is-purple.is-bold {
       background-image: linear-gradient(141deg, #4c45b5 0%, #8372bb 71%, #9c7fc8 100%); }
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 999px) {
         .hero.is-purple.is-bold .nav-menu {
           background-image: linear-gradient(141deg, #4c45b5 0%, #8372bb 71%, #9c7fc8 100%); } }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 999px) {
       .hero.is-purple .nav-toggle span {
         background-color: #fff; }
       .hero.is-purple .nav-toggle:hover {
