--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -5,7 +5,7 @@ $nav-height: 3.25rem !default
 .nav-toggle
   +hamburger($nav-height)
   // Responsiveness
-  +tablet
+  +desktop
     display: none
 
 .nav-item
@@ -28,7 +28,7 @@ $nav-height: 3.25rem !default
     &:last-child:not(:first-child)
       margin-left: 0.5rem
   // Responsiveness
-  +mobile
+  +touch
     justify-content: flex-start
 
 .nav-item a,
