--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -81,7 +81,7 @@
       .nav
         box-shadow: 0 1px 0 rgba($color-invert, 0.2)
       .nav-menu
-        +mobile
+        +touch
           background-color: $color
       a.nav-item,
       .nav-item a:not(.button)
@@ -115,11 +115,11 @@
         $gradient-top-left: darken(saturate(adjust-hue($color, -10deg), 10%), 10%)
         $gradient-bottom-right: lighten(saturate(adjust-hue($color, 10deg), 5%), 5%)
         background-image: linear-gradient(141deg, $gradient-top-left 0%, $color 71%, $gradient-bottom-right 100%)
-        +mobile
+        +touch
           .nav-menu
             background-image: linear-gradient(141deg, $gradient-top-left 0%, $color 71%, $gradient-bottom-right 100%)
       // Responsiveness
-      +mobile
+      +touch
         .nav-toggle
           span
             background-color: $color-invert
