Renamed mixin (compliant with the styleguide)

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -21,31 +21,31 @@
 
 // Typography
 
-=typography_size($target:'')
+=typography-size($target:'')
   @each $size in $sizes
     $i: index($sizes, $size)
     .is-size-#{$i}#{if($target == '', '', '-' + $target)}
       font-size: $size !important
 
-+typography_size()
++typography-size()
 
 +mobile
-  +typography_size('mobile')
+  +typography-size('mobile')
 
 +tablet
-  +typography_size('tablet')
+  +typography-size('tablet')
 
 +touch
-  +typography_size('touch')
+  +typography-size('touch')
 
 +desktop
-  +typography_size('desktop')
+  +typography-size('desktop')
 
 +widescreen
-  +typography_size('widescreen')
+  +typography-size('widescreen')
 
 +fullhd
-  +typography_size('fullhd')
+  +typography-size('fullhd')
 
 $alignments: ('centered': 'center', 'left': 'left', 'right': 'right')
 
